Revamp the build